k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: permafrost
  labels:
    name: permafrost
    app.kubernetes.io/name: permafrost
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/component: namespace
